--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
 
-    <div><h1>Kuzushiji Classifier</h1></div>
+    <div>
+        <h1>Kuzushiji Classifier</h1>
+    </div>
 
     <div>
         <canvas id="canvas" width="512px" height="512px"></canvas>
@@ -28,6 +30,18 @@
         <input type="range" min="5" max="50" value="25" class="slider" id="lineWidth">
         <span id="lineWidthDisplay">25</span>
 
+    </div>
+
+    <div>
+        <h2>
+            About
+        </h2>
+
+        <p>Kuzushiji is a cursive writing form of Japanese used in the past. The style is not used in current day and
+            not easily readable by the general population. This page is a showcase where you can attempt to write a
+            symbol in the Kuzushiji form and the model will guess. The model may not be as accurate as on real Kuzushiji
+            data due to real examples having varying stroke sizes which can be hard to recreate on this given canvas.
+        </p>
     </div>
 
 </body>
