--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
         <p>Kuzushiji is a cursive writing form of Japanese used in the past. The style is not used in current day and
             not easily readable by the general population. This page is a showcase where you can attempt to write a
-            symbol in the Kuzushiji form and the model will guess. The model may not be as accurate as on real Kuzushiji
+            symbol in the Kuzushiji form and the model will guess. The model may not be as accurate as it is on real
+            Kuzushiji
             data due to real examples having varying stroke sizes which can be hard to recreate on this given canvas.
         </p>
     </div>
